fix: _Blank et bug redirection

--- a/CompetitionEscalade/escalade.html
+++ b/CompetitionEscalade/escalade.html
@@ -33,24 +33,24 @@
             <div class="sectionEscalade">
                 <h3>Résultats général</h3>
                 <div style="display: flex; padding: 10px 20px">
-                    <a href="/CompetitionEscalade/Exemple/generaleExemple.html" class="bonton2" target="_blank">
+                    <a href="/CompetitionEscalade/Exemple/generaleExemple.html" class="bonton2">
                         <p style="margin: 0;">Général</p>
                     </a>
                 </div>
                 <h3>Catégorie</h3>
                 <div style="display: flex; padding: 10px 20px; gap: 20px">
-                    <a href="CompetitionEscalade/Exemple/UXMExemple.html" class="bonton2" target="_blank">
+                    <a href="/CompetitionEscalade/Exemple/UXMExemple.html" class="bonton2">
                         <p style="margin: 0;">UXM</p>
                     </a>
-                    <a href="CompetitionEscalade/Exemple/UXFExemple.html" class="bonton2" target="_blank">
+                    <a href="/CompetitionEscalade/Exemple/UXFExemple.html" class="bonton2">
                         <p style="margin: 0;">UXF</p>
                     </a>
                 </div>
                 <div style="display: flex; padding: 10px 20px; gap: 20px">
-                    <a href="" class="bonton2" target="_blank">
+                    <a href="" class="bonton2">
                         <p style="margin: 0;">UYM</p>
                     </a>
-                    <a href="" class="bonton2" target="_blank">
+                    <a href="" class="bonton2">
                         <p style="margin: 0;">UYF</p>
                     </a>
                 </div>
