--- a/CompetitionEscalade/Exemple/generaleExemple.html
+++ b/CompetitionEscalade/Exemple/generaleExemple.html
@@ -54,10 +54,10 @@
                 <h2>En ligne</h2>
                 <div style="display: flex; justify-content: space-between; gap: 10px">
                     <a href="https://www.linkedin.com/in/cyprien-bons/" target="_blank">
-                        <img src="../css/img/linkedin.svg" alt="Linkedin" style="width: 18px;">
+                        <img src="../../css/img/linkedin.svg" alt="Linkedin" style="width: 18px;">
                     </a>
                     <a href="https://github.com/M2M2005" target="_blank">
-                        <img src="../css/img/github.svg" alt="GitHub" style="width: 18px;">
+                        <img src="../../css/img/github.svg" alt="GitHub" style="width: 18px;">
                     </a>
                 </div>
             </div>
