feat: css responsive escalade

--- a/CompetitionEscalade/Exemple/UXMExemple.html
+++ b/CompetitionEscalade/Exemple/UXMExemple.html
@@ -25,7 +25,7 @@
 </header>
 <body style="margin: 0;">
 <div class="cvprojet">
-    <div style="width:724px;">
+    <div class="resWidth">
         <div style="display: flex; align-items: center; justify-content: center">
             <div class="carre1"></div>
             <p style="font-size: 35px; font-family: 'poppins-semibold', sans-serif;"><strong>Résultats UXM</strong>
