--- a/CompetitionEscalade/escalade.html
+++ b/CompetitionEscalade/escalade.html
@@ -21,12 +21,12 @@
 </header>
 <body style="margin: 0;">
 <div class="cvprojet">
-    <div style="width:724px;">
+    <div class="resWidth">
         <div style="display: flex; align-items: center; justify-content: center">
             <div class="carre1"></div>
             <p style="font-size: 35px; font-family: 'poppins-semibold', sans-serif;"><strong>Résultats</strong></p>
         </div>
-        <div style="display: flex; width: 724px; justify-content: space-between; margin: 20px 0;">
+        <div style="display: flex; justify-content: space-between; margin: 20px 0;">
             <h1>Compétition Exemple</h1>
         </div>
         <div class="section">
