feat: css burger menu

--- a/cv.html
+++ b/cv.html
@@ -24,6 +24,18 @@
             <p>Projets</p>
         </a>
     </div>
+    <!-- Bouton burger -->
+    <div class="burger-menu" id="burger-menu">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+    <!-- Menu déroulant pour le burger -->
+    <nav class="burger-nav" id="burger-nav">
+        <a href="/index.html">À PROPOS DE MOI</a>
+        <a href="/cv.html" class="actuel">CV</a>
+        <a href="/projets.html">Projets</a>
+    </nav>
 </header>
 <body style="margin: 0;">
 <div class="cvprojet">
@@ -205,4 +217,5 @@
         </div>
     </div>
 </footer>
+<script src="js/script.js"></script>
 </html>
