--- a/cv.html
+++ b/cv.html
@@ -14,15 +14,9 @@
         <div>/ Étudiant en Informatique</div>
     </a>
     <div class="header2">
-        <a href="/index.html">
-            <p>À PROPOS DE MOI</p>
-        </a>
-        <a href="/cv.html">
-            <p class="actuel">CV</p>
-        </a>
-        <a href="/projets.html">
-            <p>Projets</p>
-        </a>
+        <a href="/index.html">À PROPOS DE MOI</a>
+        <a href="/cv.html" class="actuel">CV</a>
+        <a href="/projets.html">Projets</a>
     </div>
     <!-- Bouton burger -->
     <div class="burger-menu" id="burger-menu">
@@ -36,6 +30,7 @@
         <a href="/cv.html" class="actuel">CV</a>
         <a href="/projets.html">Projets</a>
     </nav>
+    <script src="js/script.js"></script>
 </header>
 <body style="margin: 0;">
 <div class="cvprojet">
@@ -217,5 +212,4 @@
         </div>
     </div>
 </footer>
-<script src="js/script.js"></script>
 </html>
