--- a/CompetitionEscalade/Exemple/generaleExemple.html
+++ b/CompetitionEscalade/Exemple/generaleExemple.html
@@ -14,10 +14,19 @@
         <div>/ COBEscalde</div>
     </a>
     <div class="header2">
-        <a href="/CompetitionEscalade/escalade.html">
-            <p class="actuel">Liste</p>
-        </a>
+        <a href="/CompetitionEscalade/escalade.html" class="actuel">Liste</a>
     </div>
+    <!-- Bouton burger -->
+    <div class="burger-menu" id="burger-menu">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+    <!-- Menu déroulant pour le burger -->
+    <nav class="burger-nav" id="burger-nav">
+        <a href="/CompetitionEscalade/escalade.html" class="actuel">Liste</a>
+    </nav>
+    <script src="js/script.js"></script>
 </header>
 <body style="margin: 0;">
 <div class="cvprojet">
