--- a/CompetitionEscalade/escalade.html
+++ b/CompetitionEscalade/escalade.html
@@ -8,16 +8,39 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <header>
+    <a href="/index.html" class="header">
+        <div class="carre"></div>
+        <h1>Cyprien Bons</h1>
+        <div>/ Étudiant en Informatique</div>
+    </a>
+    <div class="header2">
+        <a href="/index.html">À PROPOS DE MOI</a>
+        <a href="/cv.html">CV</a>
+        <a href="/projets.html" class="actuel">Projets</a>
+    </div>
+
+
+</header>
+<header>
     <a href="/CompetitionEscalade/escalade.html" class="header">
         <div class="carre"></div>
         <h1>Compétition Escalade</h1>
         <div>/ COBEscalde</div>
     </a>
     <div class="header2">
-        <a href="/CompetitionEscalade/escalade.html">
-            <p class="actuel">Liste</p>
-        </a>
+        <a href="/CompetitionEscalade/escalade.html" class="actuel">Liste</a>
     </div>
+    <!-- Bouton burger -->
+    <div class="burger-menu" id="burger-menu">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+    <!-- Menu déroulant pour le burger -->
+    <nav class="burger-nav" id="burger-nav">
+        <a href="/CompetitionEscalade/escalade.html" class="actuel">Liste</a>
+    </nav>
+    <script src="js/script.js"></script>
 </header>
 <body style="margin: 0;">
 <div class="cvprojet">
