--- a/index.html
+++ b/index.html
@@ -14,16 +14,23 @@
         <div>/ Étudiant en Informatique</div>
     </a>
     <div class="header2">
-        <a href="/index.html">
-            <p class="actuel">À PROPOS DE MOI</p>
-        </a>
-        <a href="/cv.html">
-            <p>CV</p>
-        </a>
-        <a href="/projets.html">
-            <p>Projets</p>
-        </a>
+        <a href="/index.html" class="actuel">À PROPOS DE MOI</a>
+        <a href="/cv.html">CV</a>
+        <a href="/projets.html">Projets</a>
     </div>
+    <!-- Bouton burger -->
+    <div class="burger-menu" id="burger-menu">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+    <!-- Menu déroulant pour le burger -->
+    <nav class="burger-nav" id="burger-nav">
+        <a href="/index.html" class="actuel">À PROPOS DE MOI</a>
+        <a href="/cv.html">CV</a>
+        <a href="/projets.html">Projets</a>
+    </nav>
+    <script src="js/script.js"></script>
 </header>
 <body style="margin: 0">
 <div class="bodyprofil">
