fix: header responsive

--- a/CompetitionEscalade/Exemple/UXFExemple.html
+++ b/CompetitionEscalade/Exemple/UXFExemple.html
@@ -9,8 +9,10 @@
 </head>
 <header>
     <a href="/CompetitionEscalade/escalade.html" class="header">
-        <div class="carre"></div>
-        <h1>Compétition Escalade</h1>
+        <div style="display: flex; align-items: center">
+            <div class="carre"></div>
+            <h1>Compétition Escalade</h1>
+        </div>
         <div>/ COBEscalde</div>
     </a>
     <div class="header2">
