--- a/CompetitionEscalade/escalade.html
+++ b/CompetitionEscalade/escalade.html
@@ -8,23 +8,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <header>
-    <a href="/index.html" class="header">
-        <div class="carre"></div>
-        <h1>Cyprien Bons</h1>
-        <div>/ Étudiant en Informatique</div>
-    </a>
-    <div class="header2">
-        <a href="/index.html">À PROPOS DE MOI</a>
-        <a href="/cv.html">CV</a>
-        <a href="/projets.html" class="actuel">Projets</a>
-    </div>
-
-
-</header>
-<header>
     <a href="/CompetitionEscalade/escalade.html" class="header">
-        <div class="carre"></div>
-        <h1>Compétition Escalade</h1>
+        <div style="display: flex; align-items: center">
+            <div class="carre"></div>
+            <h1>Compétition Escalade</h1>
+        </div>
         <div>/ COBEscalde</div>
     </a>
     <div class="header2">
