--- a/projets.html
+++ b/projets.html
@@ -9,8 +9,10 @@
 </head>
 <header>
     <a href="/index.html" class="header">
-        <div class="carre"></div>
-        <h1>Cyprien Bons</h1>
+        <div style="display: flex; align-items: center">
+            <div class="carre"></div>
+            <h1>Cyprien Bons</h1>
+        </div>
         <div>/ Étudiant en Informatique</div>
     </a>
     <div class="header2">
@@ -34,7 +36,7 @@
 </header>
 <body style="margin: 0">
 <div class="cvprojet">
-    <div style="width:724px;">
+    <div class="resWidth">
         <div style="display: flex; align-items: center; justify-content: center">
             <div class="carre1"></div>
             <p style="font-size: 35px; font-family: 'poppins-semibold', sans-serif;"><strong>Projet</strong></p>
