--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 <header>
     <a href="/index.html" class="header">
-        <div class="carre"></div>
-        <h1>Cyprien Bons</h1>
+        <div style="display: flex; align-items: center">
+            <div class="carre"></div>
+            <h1>Cyprien Bons</h1>
+        </div>
         <div>/ Étudiant en Informatique</div>
     </a>
     <div class="header2">
