feat: responsive index et cv

--- a/cv.html
+++ b/cv.html
@@ -36,15 +36,15 @@
 </header>
 <body style="margin: 0;">
 <div class="cvprojet">
-    <div style="width:724px;">
+    <div class="resWidth">
         <div style="display: flex; align-items: center; justify-content: center">
             <div class="carre1"></div>
             <p style="font-size: 35px; font-family: 'poppins-semibold', sans-serif;"><strong>CV</strong></p>
         </div>
-        <div style="display: flex; width: 724px; justify-content: space-between; margin: 20px 0;">
+        <div style="display: flex; justify-content: space-between; margin: 20px;">
             <h1>Formation</h1>
             <a href="docs/CV_2024_Cyprien_BONS_INFORMATIQUE_V10.pdf" class="bonton3" target="_blank">
-                <p style="margin: 0;">TÉLÉCHARGER CV</p>
+                TÉLÉCHARGER CV
             </a>
         </div>
         <div class="section">
@@ -94,7 +94,7 @@
                 <div style="justify-content: left;">
                     <h1>Langage de programmation</h1>
                 </div>
-                <div style="display: flex; justify-content: space-around; width: 724px">
+                <div style="display: flex; justify-content: space-around;">
                     <div class="competencecv2">
                         <div class="competencecv">
                             <div class="carre2"></div>
@@ -123,7 +123,7 @@
                 <div style="justify-content: left;">
                     <h1>Outils</h1>
                 </div>
-                <div style="display: flex; justify-content: space-around; width: 724px">
+                <div style="display: flex; justify-content: space-around;">
                     <div class="competencecv2">
                         <div class="competencecv">
                             <div class="carre2"></div>
@@ -148,7 +148,7 @@
                 <div style="justify-content: left;">
                     <h1>Langues</h1>
                 </div>
-                <div style="display: flex; justify-content: space-around; width: 724px">
+                <div style="display: flex; justify-content: space-around;">
                     <div class="competencecv2">
                         <div class="competencecv">
                             <div class="carre2"></div>
@@ -177,7 +177,7 @@
             </div>
             <div class="sectioncv3">
                 <p>
-                    J'ai débuté l'escalade en 2018 au club de Bellegarde. Ce sport m'a permis de me dépasser et de me surpasser.
+                    J'ai commencé l'escalade en 2018 au club de Bellegarde. Ce sport m'a permis de me dépasser et de me surpasser.
                     J'ai eu l'opportunité de participer à des compétitions et à des événements liés à l'escalade, ce qui m'a aidé à développer mon esprit d'équipe et mon sens de la compétition.
                     Cette expérience m'a également permis de prendre conscience de mes responsabilités envers les autres.
                 </p>
