--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
                 </div>
             </div>
             <div style="text-align: left; padding-left: 30px">
-                <p style="font-size: 100px; font-family: 'poppins-semibold', sans-serif;"><strong>Hello</strong></p>
+                <p class="titre"><strong>Hello</strong></p>
                 <h1>Qui je suis et ce que je fais</h1>
-                <div style="display: flex; padding: 30px; gap: 30px; text-align: center">
+                <div class="bontonindex">
                     <a href="/cv.html" class="bonton1">
                         <p>CV</p>
                     </a>
