--- a/cv.html
+++ b/cv.html
@@ -171,9 +171,7 @@
             <div class="sectioncv2">
                 <h3>2018 - Maintenant</h3>
                 <h2>Escalade</h2>
-                <p style="color: white">
-                    Niveau max : 7C
-                </p>
+                <p class="secret">Niveau max : 7C</p>
             </div>
             <div class="sectioncv3">
                 <p>
