--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 <div class="bodyprofil">
     <div class="left">
         <div class="profil">
-            <div style="box-shadow: 10px 10px rgba(0,0,0,0.1);">
+            <div style="box-shadow: 10px 10px rgba(0,0,0,0.1); height: 100%">
                 <div class="profil1" >
                     <img src="css/img/cyprien.jpg" alt="Photo de profil" class="imgprofil">
-                    <p style="font-size: 27px; font-family: 'poppins-semibold', sans-serif;"><Strong>Cyprien<br>Bons</Strong></p>
+                    <p class="titreprofil2"><Strong>Cyprien<br>Bons</Strong></p>
                     <div class="trait"></div>
                     <p>Étudiant en Informatique</p>
                 </div>
@@ -54,8 +54,8 @@
                     </a>
                 </div>
             </div>
-            <div style="text-align: left; padding-left: 30px">
-                <p class="titre"><strong>Hello</strong></p>
+            <div class="profil2">
+                <p class="titreprofil"><strong>Hello</strong></p>
                 <h1>Qui je suis et ce que je fais</h1>
                 <div class="bontonindex">
                     <a href="/cv.html" class="bonton1">
