fix: syntaxe et liens

--- a/CompetitionEscalade/Exemple/generaleExemple.html
+++ b/CompetitionEscalade/Exemple/generaleExemple.html
@@ -8,15 +8,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <header>
-    <a href="/CompetitionEscalade/escalade.html" class="header">
+    <a href="../../CompetitionEscalade/escalade.html" class="header">
         <div style="display: flex; align-items: center">
             <div class="carre"></div>
             <h1>Compétition Escalade</h1>
         </div>
-        <div>/ COBEscalde</div>
+        <div>/ COBEscalade</div>
     </a>
     <div class="header2">
-        <a href="/CompetitionEscalade/escalade.html" class="actuel">Liste</a>
+        <a href="../../CompetitionEscalade/escalade.html" class="actuel">Liste</a>
     </div>
     <!-- Bouton burger -->
     <div class="burger-menu" id="burger-menu">
@@ -26,16 +26,16 @@
     </div>
     <!-- Menu déroulant pour le burger -->
     <nav class="burger-nav" id="burger-nav">
-        <a href="/CompetitionEscalade/escalade.html" class="actuel">Liste</a>
+        <a href="../../CompetitionEscalade/escalade.html" class="actuel">Liste</a>
     </nav>
-    <script src="js/script.js"></script>
+    <script src="../../js/script.js"></script>
 </header>
 <body style="margin: 0;">
 <div class="cvprojet">
     <div class="resWidth">
         <div style="display: flex; align-items: center; justify-content: center">
             <div class="carre1"></div>
-            <p style="font-size: 35px; font-family: 'poppins-semibold', sans-serif;"><strong>Résultats Générale</strong>
+            <p style="font-size: 35px; font-family: 'poppins-semibold', sans-serif;"><strong>Résultat Générale</strong>
             </p>
         </div>
         <div style="display: flex; padding: 20px; justify-content: center">
