--- a/CompetitionEscalade/escalade.html
+++ b/CompetitionEscalade/escalade.html
@@ -8,15 +8,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <header>
-    <a href="/CompetitionEscalade/escalade.html" class="header">
+    <a href="../CompetitionEscalade/escalade.html" class="header">
         <div style="display: flex; align-items: center">
             <div class="carre"></div>
             <h1>Compétition Escalade</h1>
         </div>
-        <div>/ COBEscalde</div>
+        <div>/ COBEscalade</div>
     </a>
     <div class="header2">
-        <a href="/CompetitionEscalade/escalade.html" class="actuel">Liste</a>
+        <a href="../CompetitionEscalade/escalade.html" class="actuel">Liste</a>
     </div>
     <!-- Bouton burger -->
     <div class="burger-menu" id="burger-menu">
@@ -26,9 +26,9 @@
     </div>
     <!-- Menu déroulant pour le burger -->
     <nav class="burger-nav" id="burger-nav">
-        <a href="/CompetitionEscalade/escalade.html" class="actuel">Liste</a>
+        <a href="../CompetitionEscalade/escalade.html" class="actuel">Liste</a>
     </nav>
-    <script src="js/script.js"></script>
+    <script src="../js/script.js"></script>
 </header>
 <body style="margin: 0;">
 <div class="cvprojet">
@@ -42,18 +42,18 @@
         </div>
         <div class="section">
             <div class="sectionEscalade">
-                <h3>Résultats général</h3>
+                <h3>Résultats généraux</h3>
                 <div style="display: flex; padding: 10px 20px">
-                    <a href="/CompetitionEscalade/Exemple/generaleExemple.html" class="bonton2">
+                    <a href="../CompetitionEscalade/Exemple/generaleExemple.html" class="bonton2">
                         <p style="margin: 0;">Général</p>
                     </a>
                 </div>
                 <h3>Catégorie</h3>
                 <div style="display: flex; padding: 10px 20px; gap: 20px">
-                    <a href="/CompetitionEscalade/Exemple/UXMExemple.html" class="bonton2">
+                    <a href="../CompetitionEscalade/Exemple/UXMExemple.html" class="bonton2">
                         <p style="margin: 0;">UXM</p>
                     </a>
-                    <a href="/CompetitionEscalade/Exemple/UXFExemple.html" class="bonton2">
+                    <a href="../CompetitionEscalade/Exemple/UXFExemple.html" class="bonton2">
                         <p style="margin: 0;">UXF</p>
                     </a>
                 </div>
