--- a/cv.html
+++ b/cv.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <header>
-    <a href="/index.html" class="header">
+    <a href="index.html" class="header">
         <div style="display: flex; align-items: center">
             <div class="carre"></div>
             <h1>Cyprien Bons</h1>
@@ -16,9 +16,9 @@
         <div>/ Étudiant en Informatique</div>
     </a>
     <div class="header2">
-        <a href="/index.html">À PROPOS DE MOI</a>
-        <a href="/cv.html" class="actuel">CV</a>
-        <a href="/projets.html">Projets</a>
+        <a href="index.html">À PROPOS DE MOI</a>
+        <a href="cv.html" class="actuel">CV</a>
+        <a href="projets.html">Projets</a>
     </div>
     <!-- Bouton burger -->
     <div class="burger-menu" id="burger-menu">
@@ -28,9 +28,9 @@
     </div>
     <!-- Menu déroulant pour le burger -->
     <nav class="burger-nav" id="burger-nav">
-        <a href="/index.html">À PROPOS DE MOI</a>
-        <a href="/cv.html" class="actuel">CV</a>
-        <a href="/projets.html">Projets</a>
+        <a href="index.html">À PROPOS DE MOI</a>
+        <a href="cv.html" class="actuel">CV</a>
+        <a href="projets.html">Projets</a>
     </nav>
     <script src="js/script.js"></script>
 </header>
