--- a/projets.html
+++ b/projets.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <header>
-    <a href="/index.html" class="header">
+    <a href="index.html" class="header">
         <div style="display: flex; align-items: center">
             <div class="carre"></div>
             <h1>Cyprien Bons</h1>
@@ -16,9 +16,9 @@
         <div>/ Étudiant en Informatique</div>
     </a>
     <div class="header2">
-        <a href="/index.html">À PROPOS DE MOI</a>
-        <a href="/cv.html">CV</a>
-        <a href="/projets.html" class="actuel">Projets</a>
+        <a href="index.html">À PROPOS DE MOI</a>
+        <a href="cv.html">CV</a>
+        <a href="projets.html" class="actuel">Projets</a>
     </div>
     <!-- Bouton burger -->
     <div class="burger-menu" id="burger-menu">
@@ -28,9 +28,9 @@
     </div>
     <!-- Menu déroulant pour le burger -->
     <nav class="burger-nav" id="burger-nav">
-        <a href="/index.html">À PROPOS DE MOI</a>
-        <a href="/cv.html">CV</a>
-        <a href="/projets.html" class="actuel">Projets</a>
+        <a href="index.html">À PROPOS DE MOI</a>
+        <a href="cv.html">CV</a>
+        <a href="projets.html" class="actuel">Projets</a>
     </nav>
     <script src="js/script.js"></script>
 </header>
@@ -93,7 +93,7 @@
                     <div class="carre3"></div>
                     <div style="padding: 0 20px">
                         <h3>Site Web Portfolio</h3>
-                        <h2 style="font-weight: normal">Projet Perssonel</h2>
+                        <h2 style="font-weight: normal">Projet Personnel</h2>
                     </div>
                 </div>
                 <p style="padding: 5px 15px">
@@ -138,8 +138,8 @@
                 <div style="display: flex;">
                     <div class="carre3"></div>
                     <div style="padding: 0 20px">
-                        <h3>Exel Compétion Escalade</h3>
-                        <h2 style="font-weight: normal">Projet Perssonel</h2>
+                        <h3>Exel Compétition Escalade</h3>
+                        <h2 style="font-weight: normal">Projet Personnel</h2>
                     </div>
                 </div>
                 <p style="padding: 5px 15px">
