--- a/CompetitionEscalade/Exemple/UXMExemple.html
+++ b/CompetitionEscalade/Exemple/UXMExemple.html
@@ -38,7 +38,7 @@
             <p style="font-size: 35px; font-family: 'poppins-semibold', sans-serif;"><strong>Résultat UXM</strong>
             </p>
         </div>
-        <div style="display: flex; padding: 20px; justify-content: center">
+        <div class="idframe">
             <iframe
                     src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQsVs5IHhcXnbtouaQaL72c4ErO8fLRhnV6ZzbrE4p5mfQeVuP4hbxvFanr2s6w_2x8utI8gYqBbS8B/pubhtml?gid=385620086&amp;single=true&amp;widget=true&amp;headers=false"
                     style="width: 525px; height: 750px; border: none; border-radius: 5px;">
