feat: supr et modification du menu

--- a/CompetitionEscalade/escalade.html
+++ b/CompetitionEscalade/escalade.html
@@ -38,31 +38,17 @@
             <p style="font-size: 35px; font-family: 'poppins-semibold', sans-serif;"><strong>Résultats</strong></p>
         </div>
         <div style="display: flex; justify-content: space-between; margin: 20px 0;">
-            <h1>Compétition Exemple</h1>
+            <h1>Compétition 2000Test</h1>
         </div>
         <div class="section">
             <div class="sectionEscalade">
-                <h3>Résultats généraux</h3>
-                <div style="display: flex; padding: 10px 20px">
-                    <a href="../CompetitionEscalade/Exemple/generaleExemple.html" class="bonton2">
-                        <p style="margin: 0;">Général</p>
-                    </a>
-                </div>
-                <h3>Catégorie</h3>
+                <h3>Résultats</h3>
                 <div style="display: flex; padding: 10px 20px; gap: 20px">
-                    <a href="../CompetitionEscalade/Exemple/UXMExemple.html" class="bonton2">
-                        <p style="margin: 0;">UXM</p>
+                    <a href="../CompetitionEscalade/2000Test/2000Test.html" class="bonton2">
+                        <p style="margin: 0;">Matin</p>
                     </a>
-                    <a href="../CompetitionEscalade/Exemple/UXFExemple.html" class="bonton2">
-                        <p style="margin: 0;">UXF</p>
-                    </a>
-                </div>
-                <div style="display: flex; padding: 10px 20px; gap: 20px">
-                    <a href="" class="bonton2">
-                        <p style="margin: 0;">UYM</p>
-                    </a>
-                    <a href="" class="bonton2">
-                        <p style="margin: 0;">UYF</p>
+                    <a href="../CompetitionEscalade/2000Test/2000Test.html" class="bonton2">
+                        <p style="margin: 0;">Après-Midi</p>
                     </a>
                 </div>
             </div>
