feat: update projet exel

--- a/projets.html
+++ b/projets.html
@@ -84,7 +84,7 @@
                 </div>
             </div>
             <div class="image-container">
-                <img src="css/img/site-e-commerce.png" alt="LegendsBuster">
+                <img src="css/img/site-e-commerce.png" alt="Site E-Commerce">
             </div>
         </div>
         <div class="section">
@@ -108,7 +108,7 @@
                 </div>
             </div>
             <div class="image-container">
-                <img src="css/img/site-this.png" alt="LegendsBuster">
+                <img src="css/img/site-this.png" alt="Port Folio">
             </div>
         </div>
         <div class="section">
@@ -130,7 +130,7 @@
                 </div>
             </div>
             <div class="image-container">
-                <img src="css/img/referendum.png" alt="LegendsBuster">
+                <img src="css/img/referendum.png" alt="Referendum">
             </div>
         </div>
         <div class="section">
@@ -143,8 +143,8 @@
                     </div>
                 </div>
                 <p style="padding: 5px 15px">
-                    Le but de ce projet était de comptabiliser les points des compétiteurs lors d'une compétition d'escalade.
-                    Le projet utilise un tableur exel avec des formules pour calculer les points des compétiteurs.
+                    Ce projet permet de comptabiliser et d'afficher les points des compétiteurs lors d'une compétition d'escalade. Le calcul des résultats est enregistré dans une Google Sheet. Un site web récupère dynamiquement les résultats via l'API Google Sheets en JavaScript pour les afficher.
+                    Par ailleurs, une interface est en cours de développement sur Google Sheets pour automatiser des tâches telles que l'ajout de participants et de catégories, en utilisant Google Apps Script.
                 </p>
                 <div style="display: flex; justify-content: center; padding: 20px 0; gap: 20px">
                     <a href="https://drive.google.com/drive/folders/1aXPQoZu6ZVLKaPpNFQsAJGHnI8vSY_jp?usp=sharing" class="bonton2" target="_blank">
@@ -156,7 +156,7 @@
                 </div>
             </div>
             <div class="image-container">
-                <img src="css/img/exel.png" alt="LegendsBuster">
+                <img src="css/img/exel1.png" alt="Exel">
             </div>
         </div>
     </div>
