feat : Ajout compétition 2024 pour test

--- a/CompetitionEscalade/escalade.html
+++ b/CompetitionEscalade/escalade.html
@@ -38,14 +38,14 @@
             <p style="font-size: 35px; font-family: 'poppins-semibold', sans-serif;"><strong>Résultats</strong></p>
         </div>
         <div style="display: flex; justify-content: space-between; margin: 20px 0;">
-            <h1>Compétition 2000Test</h1>
+            <h1>Challenge 2024</h1>
         </div>
         <div class="section">
             <div class="sectionEscalade">
-                <h3>Résultats</h3>
-                <div style="display: flex; padding: 10px 20px; gap: 20px">
-                    <a href="../CompetitionEscalade/2000Test/2000Test.html" class="bonton2">
-                        <p style="margin: 0;">Matin</p>
+                <h3>Résultat 9 juin 2024</h3>
+                <div style="display: flex; margin: 20px; gap: 20px">
+                    <a href="2024/2024.html" class="bonton2">
+                        <p style="margin: 0;">Journée</p>
                     </a>
                     <a href="../CompetitionEscalade/2000Test/2000Test.html" class="bonton2">
                         <p style="margin: 0;">Après-Midi</p>
