--- a/CompetitionEscalade/escalade.html
+++ b/CompetitionEscalade/escalade.html
@@ -47,8 +47,30 @@
                     <a href="2024/2024.html" class="bonton2">
                         <p style="margin: 0;">Journée</p>
                     </a>
-                    <a href="../CompetitionEscalade/2000Test/2000Test.html" class="bonton2">
-                        <p style="margin: 0;">Après-Midi</p>
+                </div>
+            </div>
+        </div>
+        <div style="display: flex; justify-content: space-between; margin: 20px 0;">
+            <h1>Challenge 2025</h1>
+        </div>
+        <div class="section">
+            <div class="sectionEscalade">
+                <h3>Résultats Samedi 24 Mai 2025</h3>
+                <div style="display: flex; margin: 20px; gap: 20px">
+                    <a href="2024/2024.html" class="bonton2">
+                        <p style="margin: 0;">Matin</p>
+                    </a>
+                    <a href="2024/2024.html" class="bonton2">
+                        <p style="margin: 0;">Après midi</p>
+                    </a>
+                </div>
+                <h3>Résultats Dimanche 25 Mai 2025</h3>
+                <div style="display: flex; margin: 20px; gap: 20px">
+                    <a href="2024/2024.html" class="bonton2">
+                        <p style="margin: 0;">Matin</p>
+                    </a>
+                    <a href="2024/2024.html" class="bonton2">
+                        <p style="margin: 0;">Après midi</p>
                     </a>
                 </div>
             </div>
