feat : mise à jour des projets

--- a/projets.html
+++ b/projets.html
@@ -56,7 +56,7 @@
                     Vous pouvez retrouver le projet et y jouer sur Windows et Mac en cliquant sur le bouton ci-dessous.
                 </p>
                 <div style="display: flex; justify-content: center; padding: 20px 0">
-                    <a href="https://wailreiz.itch.io/legends-buster" class="bonton2" target="_blank">
+                    <a href="https://drive.google.com/drive/folders/1kk-ehaBQmD1dpbDoX3wrNLLrJnqQw2BI?usp=drive_link" class="bonton2" target="_blank">
                         <p style="margin: 0;">Voir le projet</p>
                     </a>
                 </div>
@@ -77,9 +77,12 @@
                 <p style="padding: 5px 15px">
                     Création d'un site web e-commerce de vente de parfums réalisé en PHP avec une connexion à une base de données. Gestion des utilisateurs, des produits, des ventes et des paniers.
                 </p>
-                <div style="display: flex; justify-content: center; padding: 20px 0">
+                <div style="display: flex; justify-content: center; padding: 20px 0; gap: 20px">
                     <a href="https://github.com/M2M2005/E-Commerce" class="bonton2" target="_blank">
                         <p style="margin: 0;">Voir le projet</p>
+                    </a>
+                    <a href="https://webinfo.iutmontp.univ-montp2.fr/~bonsc/Projetweb/web/controleurFrontal.php" class="bonton2" target="_blank">
+                        <p style="margin: 0;">Site du projet</p>
                     </a>
                 </div>
             </div>
@@ -143,8 +146,9 @@
                     </div>
                 </div>
                 <p style="padding: 5px 15px">
-                    Ce projet permet de comptabiliser et d'afficher les points des compétiteurs lors d'une compétition d'escalade. Le calcul des résultats est enregistré dans une Google Sheet. Un site web récupère dynamiquement les résultats via l'API Google Sheets en JavaScript pour les afficher.
-                    Par ailleurs, une interface est en cours de développement sur Google Sheets pour automatiser des tâches telles que l'ajout de participants et de catégories, en utilisant Google Apps Script.
+                    Ce projet permet de comptabiliser et d'afficher les points des compétiteurs lors d'une compétition d'escalade.
+                    Le calcul des résultats est enregistré dans une Google Sheet, et un site web récupère dynamiquement ces résultats via l'API Google Sheets en JavaScript pour les afficher.
+                    Une interface a été développée sur Google Sheets, intégrant des boutons permettant d'automatiser certaines tâches, comme l'ajout de participants et de catégories, grâce à Google Apps Script.
                 </p>
                 <div style="display: flex; justify-content: center; padding: 20px 0; gap: 20px">
                     <a href="https://drive.google.com/drive/folders/1aXPQoZu6ZVLKaPpNFQsAJGHnI8vSY_jp?usp=sharing" class="bonton2" target="_blank">
