feat : mise à jour du cv

--- a/cv.html
+++ b/cv.html
@@ -52,37 +52,72 @@
                 <h3>2023 - Maintenant</h3>
                 <h2>Étudiant en Informatique</h2>
                 <h2 style="font-weight: normal">IUT Montpellier-Sète</h2>
-                <h2 style="font-weight: normal">Montpellier - France</h2>
+                <h2 style="font-weight: normal">Montpellier, France</h2>
                 <h2 style="font-weight: normal">En cours de formation</h2>
+                <br>
+                <div style="display: flex; justify-content: center;">
+                    <img class="image-projet" src="css/img/iut-Montpellier-cete.jpeg" alt="IUT - Montpellier - Cète">
+                </div>
             </div>
             <div class="sectioncv3">
                 <p>
-                    Je suis étudiant à l'IUT depuis 2022, actuellement en deuxième année de BUT Informatique.
-                    J'ai choisi cette formation, car je suis passionné par l'informatique et les nouvelles technologies.
+                    Étudiant à l'IUT Montpellier-Sète depuis 2023, je suis actuellement en deuxième année de BUT Informatique.
+                    Passionné par l'informatique et les nouvelles technologies, j'ai choisi cette formation pour acquérir des compétences solides en développement et en gestion des systèmes informatiques.
                 </p>
                 <p>
-                    J'ai opté pour l'option DACS afin de me spécialiser en cybersécurité et en programmation.
+                    J'ai opté pour l'option DACS afin de me spécialiser en cybersécurité et en programmation avancée.
+                </p>
+            </div>
+        </div>
+        <div class="section">
+            <div class="sectioncv2">
+                <h3>Février 2025 - Mars 2025</h3>
+                <h2>Stage - Software Engineer</h2>
+                <h2 style="font-weight: normal">Orchestra - TravelSoft</h2>
+                <h2 style="font-weight: normal">Paris, France</h2>
+                <h2 style="font-weight: normal">8 semaines</h2>
+                <br>
+                <a href="" class="bonton2">
+                    <p style="margin: 0;">Rapport</p>
+                </a>
+                <br>
+                <div style="display: flex; justify-content: center;">
+                    <img class="image-projet" src="css/img/orchestra-plateforme.jpg" alt="Orchestra - TravelSoft">
+                </div>
+            </div>
+            <div class="sectioncv3">
+                <p>
+                    J'ai effectué un stage de 8 semaines chez Orchestra - TravelSoft en tant que Software Engineer.
+                    Intégré à l'équipe QA (Quality Assurance), j'ai pu appliquer mes compétences en développement et en automatisation des tests.
+                </p>
+                <p>
+                    Mon rôle consistait à concevoir et implémenter des tests automatisés avec Selenium en Java afin de valider l'intégration de nouvelles compagnies dans le logiciel de l'entreprise.
+                    Cette expérience m'a permis de renforcer mes compétences en assurance qualité et en développement orienté tests.
                 </p>
             </div>
         </div>
         <div class="section">
             <div class="sectioncv2">
                 <h3>2020 - 2023</h3>
-                <h2>BAC technologique STI2D</h2>
-                <h2 style="font-weight: normal">Lycée Emmanuel d’Alzon Nîmes</h2>
-                <h2 style="font-weight: normal">Nîmes - France</h2>
-                <h2 style="font-weight: normal">Admis Mention Assez Bien</h2>
+                <h2>Baccalauréat technologique STI2D</h2>
+                <h2 style="font-weight: normal">Lycée Emmanuel d’Alzon</h2>
+                <h2 style="font-weight: normal">Nîmes, France</h2>
+                <h2 style="font-weight: normal">Admis avec Mention Assez Bien</h2>
+                <br>
+                <div style="display: flex; justify-content: center;">
+                    <img class="image-projet" src="css/img/d'alzon.png" alt="D'Alzon Logo">
+                </div>
             </div>
             <div class="sectioncv3">
                 <p>
-                    J'ai choisi le parcours BAC STI2D, car je souhaitais suivre une formation scientifique tout en privilégiant des aspects concrets et pratiques.
-                    Grâce à ce parcours, j'ai acquis de nombreuses compétences techniques ainsi que des connaissances solides en industrialisation.
+                    J'ai obtenu mon Baccalauréat STI2D avec mention Assez Bien.
+                    Ce parcours, axé sur les sciences et les technologies de l'industrie et du développement durable, m'a permis d'acquérir des compétences techniques en ingénierie et en conception.
                 </p>
                 <p>
-                    Cette filière m'a donné l'occasion de mener des projets en équipe, notamment dans les domaines de l'automatisation et de la conception technique.
+                    Grâce à cette formation, j'ai travaillé sur divers projets en équipe, notamment dans les domaines de l'automatisation et de la conception technique, renforçant ainsi mes capacités d'analyse et de résolution de problèmes.
                 </p>
                 <p>
-                    Cette formation m'a permis de me familiariser avec les principes fondamentaux de l'électronique, de la mécanique et de l'automatisation.
+                    J'y ai également découvert les bases de l'électronique, de la mécanique et de l'automatisation, qui ont contribué à mon intérêt pour l'informatique et l'innovation technologique.
                 </p>
             </div>
         </div>
